# k8s-challenge-0

./: .gitignore  .pre-commit-config.yaml  .releaserc.yml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml  release.yml
requirements/: requirements-test.txt  requirements.txt
terraform/: dev.tfvars  dynamodb.tf  kubernetes.tf  outputs.tf  provider.tf  s3.tf  variables.tf
terraform/backends/: dev.backend
tests/: conftest.py  test_app.py
